# scdd

./: .gitignore  CMakeLists.txt  build.sh  out.s  test.scdd  test_compiler.sh
include/: arena.hpp  generator.hpp  main.hpp  parser.hpp  prerequisites.hpp  tokenizer.hpp
src/: arena.cpp  generator.cpp  main.cpp  parser.cpp  tokenizer.cpp
